--- a/frontend-service/app/src/components/header/Header.css
+++ b/frontend-service/app/src/components/header/Header.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+
 .header {
   background-color: #2d2d2d;
   padding: 1rem;
