--- a/frontend-service/app/src/assets/css/global.css
+++ b/frontend-service/app/src/assets/css/global.css
@@ -165,3 +165,19 @@ body.light .link-button {
 body.light .link-button:hover {
     color: #357abd;
 }
+
+/* Style des points de navigation pour le thème clair */
+body.light .slick-dots li button:before {
+    font-size: 8px;
+    color: #9a9797 !important;
+    opacity: 0.7;
+}
+
+body.light .slick-dots li.slick-active button:before {
+    color: #ffffff !important;
+    opacity: 1;
+}
+
+body.light .slick-dots li button:hover:before {
+    opacity: 1;
+}
