--- a/frontend-service/app/src/pages/DungeonPage/DungeonPage.css
+++ b/frontend-service/app/src/pages/DungeonPage/DungeonPage.css
@@ -91,13 +91,14 @@
     color: #ff4400;
 }
 
+
 .victory-popup {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    /*background-color: rgba(0, 0, 0, 0.8);*/
     display: flex;
     justify-content: center;
     align-items: center;
